<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:weightSum="1"
        android:id="@+id/linearlayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/textView_my_egg_is_..."
            android:id="@+id/textView_my_egg_is_..."
            android:gravity="center|center_vertical"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="0.07" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="28dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textView_size_small"
                android:id="@+id/textView_size_small"
                android:layout_weight="0.33"
                android:textStyle="bold"
                android:gravity="center_vertical|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textView_size_medium"
                android:id="@+id/textView_size_medium"
                android:layout_weight="0.34"
                android:gravity="center|center_vertical"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textView_size_big"
                android:id="@+id/textView_size_big"
                android:layout_weight="0.33"
                android:gravity="center_vertical|left"
                android:textStyle="bold" />
        </LinearLayout>

        <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar_my_egg_is_..."
            android:layout_gravity="center_horizontal"
            android:max="4"
            android:progress="2" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/textView_how_should_it_be"
            android:id="@+id/textView_how_should_it_be"
            android:gravity="center|center_vertical"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="0.07" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="28dp"
            android:weightSum="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textView_softly"
                android:id="@+id/textView"
                android:layout_weight="0.33"
                android:textStyle="bold"
                android:gravity="center_vertical|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textView_medium"
                android:id="@+id/textView2"
                android:layout_weight="0.34"
                android:gravity="center|center_vertical"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textView_hard"
                android:id="@+id/textView3"
                android:layout_weight="0.33"
                android:gravity="center_vertical|left"
                android:textStyle="bold" />
        </LinearLayout>

        <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar_how_should_it_be"
            android:layout_gravity="center_horizontal"
            android:max="40"
            android:progress="20" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/button_start_boil"
            android:id="@+id/button_start_boil"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.24" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:id="@+id/textView_show_location"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.07" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Longitude"
            android:id="@+id/textView_longitude"
            android:layout_weight="0.07" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView_value_longitude"
            android:layout_weight="0.07" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Latitude"
            android:id="@+id/textView_latitude"
            android:layout_weight="0.07" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView_value_latitude"
            android:layout_weight="0.07" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Altitude"
            android:id="@+id/textView_altitude"
            android:layout_weight="0.07" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView_value_altitude"
            android:layout_weight="0.07" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"></LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/progressBar_Altitude"
        android:layout_gravity="center"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mTextField"
        android:layout_gravity="right|bottom" />

</FrameLayout>
